Initial styling of site for mime

--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -36,6 +36,7 @@
 
       <div id="header">
         <div class="centre">
+          <img src="/assets/learn.svg" alt="Learn" class="learn" />
           <h1 class="title"><a href="/"><img src="/assets/logo.svg" alt="Mime Industries" /></a></h1>
         </div>
       </div>
