--- a/_assets/css/main.scss
+++ b/_assets/css/main.scss
@@ -249,11 +249,7 @@ a:visited{color:#999}
   }
 }
 
-.doc{
-  .type.meta, a.type{background-color:$mime-light-blue}
-  .level.meta, a.level{background-color:$mime-orange}
-  .hw.meta, a.hw{background-color:$mime-yellow}
-    
+.doc{    
   .meta{
     display: inline-block;
     padding:6px;
@@ -262,14 +258,18 @@ a:visited{color:#999}
     font-weight: bold;
     color:#FFF;
   }
+  
   .hw.meta{
     position:absolute;
     top:10px;
     left:-3px;
   }
 }
-a.tag{background-color:$mime-dark-blue}
 
+.doc .type.meta, a.type{background-color:$mime-light-blue}
+.doc .level.meta, a.level{background-color:$mime-orange}
+.doc .hw.meta, a.hw{background-color:$mime-yellow}
+a.tag{background-color:$mime-dark-blue}
 
 #docpage{
   margin-top:70px;
