--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -37,7 +37,7 @@
       <div id="header">
         <div class="centre">
           <img src="/assets/learn.svg" alt="Learn" class="learn" />
-          <h1 class="title"><a href="/"><img src="/assets/logo.svg" alt="Mime Industries" /></a></h1>
+          <a href="/"><img src="/assets/logo.svg" alt="Mime Industries" /></a>
         </div>
       </div>
       {{ content }}
