--- a/_assets/css/main.scss
+++ b/_assets/css/main.scss
@@ -79,22 +79,19 @@ a:visited{color:#999}
   z-index: 10000;
   
   a{
+    display:block;
     padding:0;
-    margin:0;
-  }
-
-  h1{
-    margin:10px 10px 0 15px;
+    margin:5px 0 5px 15px;
   }
 
   img{
-    margin:0 0 10px;
     padding:0;
     max-width:80%;
-    height:25px;
+    height:30px;
   }
   
   img.learn{
+    margin-top:10px;
     height:20px;
     float:right;
   }
@@ -104,6 +101,12 @@ a:visited{color:#999}
   margin-top: 90px;
   
   #header{
+    a{
+      display:block;
+      padding:0;
+      margin:10px 0 10px 15px;
+    }
+    
     img{
       height:50px;
     }
