Add the first stab at the MeArm Pi video build docs

--- a/_assets/css/main.scss
+++ b/_assets/css/main.scss
@@ -2,448 +2,13 @@ $mime-yellow:       #F1BE48;
 $mime-orange:       #FF8200;
 $mime-light-blue:   #00A3E0;
 $mime-dark-blue:    #1B365D;
+$font-family:       "T Star Mono Round", "Lucida Console", Monaco, monospace;
 
-/* Eric Meyer's Reset CSS v2.0 - http://cssreset.com */
-html,body,div,span,applet,object,iframe,h1,h2,h3,h4,h5,h6,p,blockquote,pre,a,abbr,acronym,address,big,cite,code,del,dfn,em,img,ins,kbd,q,s,samp,small,strike,strong,sub,sup,tt,var,b,u,i,center,dl,dt,dd,ol,ul,li,fieldset,form,label,legend,table,caption,tbody,tfoot,thead,tr,th,td,article,aside,canvas,details,embed,figure,figcaption,footer,header,hgroup,menu,nav,output,ruby,section,summary,time,mark,audio,video{border:0;font-size:100%;font:inherit;vertical-align:baseline;margin:0;padding:0}article,aside,details,figcaption,figure,footer,header,hgroup,menu,nav,section{display:block}body{line-height:1}ol,ul{list-style:none}blockquote,q{quotes:none}blockquote:before,blockquote:after,q:before,q:after{content:none}table{border-collapse:collapse;border-spacing:0}
-
-@font-face {
-  font-family: "T Star Mono Round";
-  src: url("//db.onlinewebfonts.com/t/a921dd8a5b280b39e062c4ff49e03301.eot");
-  src: url("//db.onlinewebfonts.com/t/a921dd8a5b280b39e062c4ff49e03301.eot?#iefix") format("embedded-opentype"),
-  url("//db.onlinewebfonts.com/t/a921dd8a5b280b39e062c4ff49e03301.woff2") format("woff2"),
-  url("//db.onlinewebfonts.com/t/a921dd8a5b280b39e062c4ff49e03301.woff") format("woff"),
-  url("//db.onlinewebfonts.com/t/a921dd8a5b280b39e062c4ff49e03301.ttf") format("truetype"),
-  url("//db.onlinewebfonts.com/t/a921dd8a5b280b39e062c4ff49e03301.svg#T Star Mono Round") format("svg");
-  font-style:normal;
-  font-weight:400;
-}
-
-@font-face {
-  font-family: "T Star Mono Round";
-  src: url("//db.onlinewebfonts.com/t/98675ac090184429eeeedf6987c56c25.eot");
-  src: url("//db.onlinewebfonts.com/t/98675ac090184429eeeedf6987c56c25.eot?#iefix") format("embedded-opentype"),
-  url("//db.onlinewebfonts.com/t/98675ac090184429eeeedf6987c56c25.woff2") format("woff2"),
-  url("//db.onlinewebfonts.com/t/98675ac090184429eeeedf6987c56c25.woff") format("woff"),
-  url("//db.onlinewebfonts.com/t/98675ac090184429eeeedf6987c56c25.ttf") format("truetype"),
-  url("//db.onlinewebfonts.com/t/98675ac090184429eeeedf6987c56c25.svg#T Star Mono Round") format("svg");
-  font-style:normal;
-  font-weight:700;
-}
-
-html, body{
-  background-color: #EFEFEF;
-  font-family: "T Star Mono Round", "Lucida Console", Monaco, monospace;
-}
-
-h1, h2, h3, h4, h5, h6 {
-  font-size: 100%;
-  font-weight:bold;
-  margin:15px 0 20px;
-}
-
-h1{ font-size:250% }
-h2{ font-size:150% }
-
-ul{
-  padding:0 50px;
-  margin:10px 0;
-}
-
-li{
-  padding:10px 10px 5px 0;
-  list-style:disc outside;
-}
-
-p{ margin:10px 0;}
-
-p, li{
-  line-height:120%;
-}
-
-strong { font-weight: bold}
-em{ font-style:italic}
-
-a{color:#999;}
-a:visited{color:#999}
-
-.centre{
-  width:1040px;
-  margin:0 auto 0;
-}
-
-#header{
-  position:fixed;
-  top:0;
-  width:100%;
-  background:$mime-light-blue;
-  padding:0;
-  -webkit-box-shadow: 0 0 12px 0  rgba(0,0,0,0.4);
-  -moz-box-shadow: 0 0 12px 0  rgba(0,0,0,0.4);
-  box-shadow: 0 0 12px 0 rgba(0,0,0,0.4);
-  z-index: 10000;
-  
-  a{
-    display:block;
-    padding:0;
-    margin:5px 0 5px 15px;
-  }
-
-  img{
-    padding:0;
-    max-width:80%;
-    height:40px;
-  }
-  
-  img.learn{
-    margin-top:10px;
-    height:30px;
-    float:right;
-  }
-}
-
-#home {
-  margin-top: 90px;
-  
-  #header{
-    a{
-      display:block;
-      padding:0;
-      margin:10px 0 10px 15px;
-    }
-    
-    img{
-      height:50px;
-    }
-
-    img.learn{
-      margin-top:20px;
-      height:30px;
-    }
-  }
-
-  .doc{
-    display:block;
-    position:relative;
-    width: 240px;
-    display: inline-block;
-    vertical-align: top;
-    background: #FFF;
-    margin:10px;
-    padding-bottom:3px;
-    text-align:left;
-    border:3px solid #FAFAFA;
-    -webkit-border-radius: 10px;
-    -moz-border-radius: 10px;
-    border-radius: 10px;
-    -webkit-box-shadow: 0 0 12px 0  rgba(0,0,0,0.4);
-    -moz-box-shadow: 0 0 12px 0  rgba(0,0,0,0.4);
-    box-shadow: 0 0 12px 0 rgba(0,0,0,0.4);
-
-    .icon{
-      display:block;
-      width:100%;
-      height:150px;
-      background-size: cover;
-      -webkit-border-top-left-radius: 10px;
-      -webkit-border-top-right-radius: 10px;
-      -moz-border-radius-topleft: 10px;
-      -moz-border-radius-topright: 10px;
-      border-top-left-radius: 10px;
-      border-top-right-radius: 10px;
-    }
-
-    a{
-      text-decoration:none;
-    }
-
-    h2{
-      font-size: 150%;
-      font-weight:bold;
-      color:#333;
-      padding:5px;
-      margin:5px 0;
-    }
-
-    p{
-      padding:0 5px;
-      margin:5px 0;
-      color:#666;
-    }
-  }
-
-  #sidebar{
-    margin-top:10px;
-    padding-top:10px;
-    float:right;
-  }
-
-  .centre{
-    width:1100px;
-  }
-}
-
-.filter{
-  a{
-    display: inline-block;
-    padding:6px;
-    margin:3px;
-    text-decoration:none;
-    font-weight: bold;
-    color:#FFF;
-  }
-
-  a.selected::before{
-    content: "\2611 ";
-    font-size:150%;
-    margin-right:3px;
-    line-height:60%;
-    font-weight:normal;
-  }
-
-  a.unselected::before{
-    content: "\2610 ";
-    font-size:150%;
-    margin-right:3px;
-    line-height:60%;
-    font-weight:normal;
-  }
-}
-
-#type-filter{
-  a.selected{
-    background-color:$mime-light-blue;
-  }
-  a.unselected{
-    border:2px solid $mime-light-blue;
-    padding:4px;
-    color:$mime-light-blue;
-  }
-}
-
-#level-filter{
-  a.selected{
-    background-color:$mime-orange;
-  }
-  a.unselected{
-    border:2px solid $mime-orange;
-    padding:4px;
-    color:$mime-orange;
-  }
-}
-
-#tag-filter{
-  a.selected{
-    background-color:$mime-dark-blue;
-  }
-  a.unselected{
-    border:2px solid $mime-dark-blue;
-    padding:4px;
-    color:$mime-dark-blue;
-  }
-  .count{
-    font-weight:normal;
-  }
-}
-
-#hw-filter{
-  a.selected{
-    background-color:$mime-yellow;
-  }
-  a.unselected{
-    border:2px solid $mime-yellow;
-    padding:4px;
-    color:$mime-yellow;
-  }
-}
-
-.doc{    
-  .meta{
-    display: inline-block;
-    padding:6px;
-    margin:3px;
-    text-decoration:none;
-    font-weight: bold;
-    color:#FFF;
-  }
-  
-  .hw.meta{
-    position:absolute;
-    top:10px;
-    left:-3px;
-  }
-}
-
-.doc .type.meta, a.type{background-color:$mime-light-blue}
-.doc .level.meta, a.level{background-color:$mime-orange}
-.doc .hw.meta, a.hw{background-color:$mime-yellow}
-a.tag{background-color:$mime-dark-blue}
-
-#docpage{
-  margin-top:70px;
-}
-
-#sidebar{
-  float:right;
-}
-
-#doc, #sidebar{
-  padding:25px 45px 45px 15px;
-  display:inline-block;
-  vertical-align: top;
-  background-color:#FFF;
-}
-
-#doc{
-  width:700px;
-  position:relative;
-  
-  img{
-    margin:10px 0;
-    max-width:100%;
-  }
-}
-
-#docs{
-  display:inline-block;
-  width:820px;
-  padding: 0 5px;
-}
-
-#sidebar{
-  width:200px;
-  margin-left:10px;
-  
-  h3{
-    margin-bottom:5px;
-  }
-}
-
-.solution *{
-  display:none;
-}
-.solution h4, .revealed h4{
-  margin-bottom:5px;
-}
-.solution button, .solution h4{
-  display:block;
-}
-.revealed button{
-  display:none;
-}
-
-code, samp, kbd {
-	font-family: "Courier New", Courier, monospace, sans-serif;
-	text-align: left;
-	color: #555;
-}
-
-pre {
-	padding: 0.1em 0.5em 0.3em 0.7em;
-	margin: 1em 0 1em 0.3em;
-	overflow: auto;
-	width: 93%;
-	
-  code {
-    line-height: 1.6em;
-    font-size: 11px;
-  }
-}
-/* target IE7 and IE6 */
-*:first-child+html pre {
-	padding-bottom: 2em;
-	overflow-y: hidden;
-	overflow: visible;
-	overflow-x: auto; 
-}
-* html pre { 
-	padding-bottom: 2em;
-	overflow: visible;
-	overflow-x: auto;
-}
-
-table td, table th{
-  text-align: left;
-  padding:3px 10px 3px 5px;
-}
-table th{
-  font-weight: bold;
-  background-color:#EEE;
-}
-
-.hw-warning{
-  font-weight:bold;
-  padding:10px;
-  background:#EEE;
-  
-  ul, p{
-    margin:3px 0;
-  }
-  ul li{
-    padding:6px 0;
-  }
-}
-
-
-@media all and (max-width: 1060px) {
-  #docpage #sidebar{
-    float:left;
-    width:auto;
-    padding:10px;
-  }
-  #docpage #sidebar h3, #docpage #sidebar div{
-    display:inline-block;
-  }
-  #docpage .centre{
-    width:760px;
-  }
-  #docpage #doc{
-    margin:10px 0 0 10px;
-  }
-}
-
-@media all and (max-width: 780px) {
-  #docpage #sidebar{
-    margin:0 10px;
-  }
-  #docpage.centre{
-    width:100%;
-  }
-  #docpage #doc{
-    margin:10px 10px 0 10px;
-    width:auto !important;
-  }
-}
-
-@media all and (max-width: 1140px) {
-  #home #sidebar{
-    width:auto;
-    float:left;
-    padding:10px;
-    margin:10px;
-    font-size:90%;
-  }
-  #sidebar h3{
-    display:inline-block;
-  }
-  #home .centre{
-    position:relative;
-    width:850px;
-  }
-  #docs{
-    width:100%;
-  }
-}
-@media all and (max-width: 840px) {
-  #home .centre{
-    width:100%;
-  }
-}
-@media all and (max-width: 545px) {
-  #home .doc{
-    width:90%
-  }
-  #home #sidebar{
-    font-size:70%;
-  }
-}
-
+@import 'reset.scss';
+@import 'fonts.scss';
+@import 'base.scss';
+@import 'home.scss';
+@import 'doc.scss';
+@import 'filters.scss';
+@import 'videoInstruction.scss';
+@import 'media-overrides.scss';
