--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -25,6 +25,8 @@
         {% stylesheet main.css %}
         {% if page.url == '/' %}
           {% javascript index.js %}
+        {% else %}
+          {% javascript doc.js %}
         {% endif %}
         {% if page.stylesheets %}
           {% for sheet in page.stylesheets %}
