--- a/_assets/css/videoInstruction.scss
+++ b/_assets/css/videoInstruction.scss
@@ -1,23 +1,3 @@
-#videoInstruction{
-  #docpage{
-    #sidebar{
-      float:left;
-      width:auto;
-      padding:10px;
-    }
-    #sidebar h3, #sidebar div{
-      display:inline-block;
-    }
-    .centre{
-      width:760px;
-    }
-    #doc{
-      margin:10px 0 0 10px;
-    }
-  }
-  
-}
-
 .videoInstruction{
   margin-top:10px;
   
@@ -87,6 +67,7 @@
   .steps{
     flex: 1 0 0;
     display:flex;
+    max-width:300px;
     flex-direction: column;
     
     
@@ -120,7 +101,7 @@
   
   .instructions{
     display:block;
-    min-height:50px;
+    min-height:200px;
     background:#EAEAEA;
     padding:10px;
     
