--- a/_assets/css/videoInstruction.scss
+++ b/_assets/css/videoInstruction.scss
@@ -80,6 +80,7 @@
     ul{
       list-style-type:none;
       overflow:auto;
+      position:relative;
       border:0;
       margin:0;
       padding:0;
