--- a/_assets/css/videoInstruction.scss
+++ b/_assets/css/videoInstruction.scss
@@ -84,8 +84,7 @@
       border:0;
       margin:0;
       padding:0;
-      flex:1;
-      height:200px;
+      flex:1 0 0;
       li{
         padding:10px 5px;
         border-bottom:1px solid #666;
