Make links light blue

--- a/_assets/css/base.scss
+++ b/_assets/css/base.scss
@@ -31,8 +31,8 @@ p, li{
 strong { font-weight: bold}
 em{ font-style:italic}
 
-a{color:#999;}
-a:visited{color:#999}
+a{color:$mime-light-blue;}
+a:visited{color:$mime-light-blue}
 
 .centre{
   width:1040px;
