Try to get Chrome to render fonts nicely on Windows

--- a/_assets/css/fonts.scss
+++ b/_assets/css/fonts.scss
@@ -21,3 +21,18 @@
   font-style:normal;
   font-weight:700;
 }
+
+@media screen and (-webkit-min-device-pixel-ratio:0) {
+  @font-face {
+    font-family: 'T Star Mono Round';
+    src: url('//db.onlinewebfonts.com/t/a921dd8a5b280b39e062c4ff49e03301.svg#T Star Mono Round') format('svg');
+    font-style:normal;
+    font-weight:400;
+  }
+  @font-face {
+    font-family: 'T Star Mono Round';
+    src: url('//db.onlinewebfonts.com/t/98675ac090184429eeeedf6987c56c25.svg#T Star Mono Round') format('svg');
+    font-style:normal;
+    font-weight:700;
+  }
+}
