--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -36,8 +36,8 @@
     </head>
     <body{% if page.url == "/" %} id="home"{% endif %}{% if page.bodyclass %} class="{{page.bodyclass}}"{% endif %}>
 
-  <div id="header">
-            <div class="centre">
+  <header>
+            <div class="menu">
               <h1 class="title"><a href="/"><img src="/assets/logo.svg" alt="Mime Industries" /></a></h1>
               <ul>
                 <li{% if page.url contains '/products/' %} class="selected"{% endif %}><a class="products" href="https://mime.co.uk/products/">Products</a>
@@ -47,7 +47,24 @@
                 <li><a href="https://shop.mime.co.uk/" class="button">Buy</a></li>
               </ul>
             </div>
-          </div>
+            <div id="productsDropdown">
+              <div class="productMenu">
+                <a href="https://mime.co.uk/products/mearm-pi/">
+                  <img src="https://mime.co.uk/assets/img/mearmPiDropdown.jpg" /><div><strong>MeArm Pi</strong><p>The Robot Arm for Raspberry Pi</p></div>
+                </a>
+              </div>
+              <div class="productMenu">
+                <a href="https://mime.co.uk/products/mearm-maker/">
+                  <img src="https://mime.co.uk/assets/img/mearmMakerDropdown.jpg" /><div><strong>MeArm Maker</strong><p>Bring your own controller!</p></div>
+                </a>
+              </div>
+              <div class="productMenu">
+                <a href="https://mime.co.uk/products/mirobot/">
+                  <img src="https://mime.co.uk/assets/img/mirobotDropdown.jpg" /><div><strong>Mirobot</strong><p>The WiFi Drawing Robot for Kids</p></div>
+                </a>
+              </div>
+            </div>
+          </header>
       {{ content }}
     </body>
 </html>
