--- a/_assets/css/base.scss
+++ b/_assets/css/base.scss
@@ -39,7 +39,7 @@ a:visited{color:$mime-light-blue}
   margin:0 auto 0;
 }
 
-#header{
+/*#header{
   position:fixed;
   top:0;
   width:100%;
@@ -68,3 +68,4 @@ a:visited{color:$mime-light-blue}
     float:right;
   }
 }
+/*
