add to main.scss

--- a/_assets/css/main.scss
+++ b/_assets/css/main.scss
@@ -7,3 +7,5 @@
 @import 'filters.scss';
 @import 'videoInstruction.scss';
 @import 'media-overrides.scss';
+@import 'header.scss';
+@import 'elements.scss';
