added javascript slideshow

--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -33,6 +33,7 @@
             <link rel="stylesheet" href="/assets/apps{{ page.url }}{{ sheet }}">
           {% endfor %}
         {% endif %}
+{% javascript slideshow.js %}
     </head>
     <body{% if page.url == "/" %} id="home"{% endif %}{% if page.bodyclass %} class="{{page.bodyclass}}"{% endif %}>
 
