--- a/_assets/css/definitions.scss
+++ b/_assets/css/definitions.scss
@@ -3,3 +3,4 @@ $mime-orange:       #FF8200;
 $mime-light-blue:   #00A3E0;
 $mime-dark-blue:    #1B365D;
 $font-family:       "T Star Mono Round", "Lucida Console", Monaco, monospace;
+$bodyfont:       "T Star Mono Round", "Lucida Console", Monaco, monospace;
