--- a/_assets/css/main.scss
+++ b/_assets/css/main.scss
@@ -11,7 +11,7 @@ $grey:           #EEE;
 $light-grey:     #FAFAFA;
 
 $bodyfont:       "T Star Mono Round", "Lucida Console", Monaco, monospace;
-$headlinefont:   "oduda"
+$headlinefont:   "oduda";
 
 @import 'mixins.scss';
 @import 'fonts.scss';
