Bring across the header from the main Mime site

--- a/_assets/css/videoInstruction.scss
+++ b/_assets/css/videoInstruction.scss
@@ -41,7 +41,7 @@
         }
         span{
           display: block;
-          font-family: $font-family;
+          font-family: $bodyfont;
           font-weight:bold;
         }
       }
