--- a/_assets/css/definitions.scss
+++ b/_assets/css/definitions.scss
@@ -2,4 +2,6 @@ $mime-yellow:       #F1BE48;
 $mime-orange:       #FF8200;
 $mime-light-blue:   #00A3E0;
 $mime-dark-blue:    #1B365D;
-$font-family:       "T Star Mono Round", "Lucida Console", Monaco, monospace;
+$highlight:         $mime-orange;
+$highlight-dark:    #d96f00;
+$bodyfont:          "T Star Mono Round", "Lucida Console", Monaco, monospace;
