--- a/_assets/css/main.scss
+++ b/_assets/css/main.scss
@@ -1,7 +1,10 @@
+@import 'mixins.scss';
 @import 'definitions.scss';
 @import 'reset.scss';
 @import 'fonts.scss';
 @import 'base.scss';
+@import 'header.scss';
+@import 'elements.scss';
 @import 'home.scss';
 @import 'doc.scss';
 @import 'filters.scss';
