--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -37,11 +37,11 @@
     <body{% if page.url == "/" %} id="home"{% endif %}{% if page.bodyclass %} class="{{page.bodyclass}}"{% endif %}>
       <header>
         <div class="menu">
-          <h1 class="title"><a href="/"><img src="/assets/logo.svg" alt="Mime Industries" /></a></h1>
+          <h1 class="title"><a href="//mime.co.uk"><img src="/assets/logo.svg" alt="Mime Industries" /></a></h1>
           <ul>
             <li><a class="products" href="//mime.co.uk/products/">Products</a></li>
             <li><a href="//mime.co.uk/education/">Education</a></li>
-            <li><a href="//mime.co.uk/build/">Build</a></li>
+            <li><a href="//learn.mime.co.uk/">Build</a></li>
             <li><a href="https://shop.mime.co.uk/" class="button">Buy</a></li>
           </ul>
         </div>
@@ -74,6 +74,14 @@ var hideProductMenu = function(){
 document.querySelector('header .products').addEventListener('mouseenter', showProductMenu);
 document.querySelector('header .products').addEventListener('touchstart', showProductMenu);
 document.querySelector('header').addEventListener('mouseleave', hideProductMenu);
+
+(function(i,s,o,g,r,a,m){i['GoogleAnalyticsObject']=r;i[r]=i[r]||function(){
+(i[r].q=i[r].q||[]).push(arguments)},i[r].l=1*new Date();a=s.createElement(o),
+m=s.getElementsByTagName(o)[0];a.async=1;a.src=g;m.parentNode.insertBefore(a,m)
+})(window,document,'script','https://www.google-analytics.com/analytics.js','ga');
+ga('create', 'UA-87174120-1', 'auto');
+ga('send', 'pageview');
+
       </script>
     </body>
 </html>
