--- a/_assets/css/definitions.scss
+++ b/_assets/css/definitions.scss
@@ -4,4 +4,4 @@ $mime-light-blue:   #00A3E0;
 $mime-dark-blue:    #1B365D;
 $highlight:         $mime-orange;
 $highlight-dark:    #d96f00;
-$bodyfont:          "T Star Mono Round", "Lucida Console", Monaco, monospace;
+$bodyfont:          "Lucida Console", Monaco, monospace;
