--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -22,9 +22,7 @@
         <meta name="theme-color" content="#ffffff">
         <meta name="viewport" content="target-densitydpi=device-dpi, width=device-width, initial-scale=1.0, user-scalable=no">
         <title>{{ page.title }}</title>
-        {% block stylesheet %}
-	  <link href="/assets/main.css" rel="stylesheet" type="text/css" />
-	{% endblock %}
+        {% stylesheet 'scss' %}
         {% if page.url == '/' %}
           {% javascript index.js %}
         {% else %}
