--- a/_layouts/video.html
+++ b/_layouts/video.html
@@ -64,7 +64,7 @@ layout: doc
       {% endfor %}
   </div>
 </div>
-{% javascript videoInstruction.js %}
+{% asset videoInstruction.js %}
 <script>
 window.addEventListener('load', function(){
   var v = new videoInstruction({
